# AI_Genesis

./: .gitignore  Ai_Genesis.ipynb  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  deploy-to-cloudrun.ps1  deploy-to-cloudrun.sh  langgraph.json  play.ipynb  pyproject.toml  ruff.toml
backend/app/: configuration.py  graph.py  prompts.py  schema.py  server.py  settings.py  tools.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/copilotkit/: page.tsx
frontend/src/app/plan/: layout.tsx  page.tsx
frontend/src/components/: agent-state.tsx  tool-call.tsx
frontend/src/lib/: middleware.ts
